Structure - Work in progress.

--- a/_system/virtual_host/main.conf
+++ b/_system/virtual_host/main.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-	ServerAdmin localhost@local
+	ServerAdmin cimo@localhost
 	ServerName localhost
 	ServerAlias localhost
 
@@ -74,7 +74,7 @@
 </VirtualHost>
 
 <VirtualHost *:443>
-	ServerAdmin localhost@local
+	ServerAdmin cimo@localhost
 	ServerName localhost
 	ServerAlias localhost
 
