--- a/_system/docker/httpd.conf
+++ b/_system/docker/httpd.conf
@@ -1,5 +1,4 @@
 ServerName localhost
-ServerRoot ${APACHE_PATH_ROOT}
 ServerSignature Off
 ServerTokens Prod
 
@@ -150,8 +149,9 @@ LoadModule rewrite_module modules/mod_rewrite.so
 </IfModule>
 
 <Directory />
-	AllowOverride none
-	Require all denied
+    AllowOverride none
+    Require all denied
 </Directory>
 
 Include ${APACHE_PATH_ROOT}/htdocs/_system/virtual_host/*.conf
+Include ${APACHE_PATH_ROOT}/htdocs/_system/virtual_host/custom/*.conf
