Ui - Work in progress...

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+COMPOSE_PROJECT_NAME=one_workspace
+
 USER_NAME=cimo
 USER_PASSWORD=Password1
 WWW_USER_NAME=user_1
@@ -5,23 +7,25 @@ WWW_USER_PASSWORD=Password1
 WEB_USER_GROUP=www-data
 PATH_ROOT=.
 TIMEZONE=Asia/Tokyo
-SSH_GROUP=sftp
-SSH_PORT=22
 
-PHP_VERSION=7.4
-PHP_PORT_FPM=9000
-PHP_PORT_XDEBUG=9999
-PHP_PATH_ROOT=/usr/local/etc
+PHP5_VERSION=5.6
+PHP5_PORT_FPM=9000
+PHP5_PORT_XDEBUG=9990
+PHP5_PATH_ROOT=/usr/local/etc
+PHP5_SSH_GROUP=sftp
+PHP5_SSH_PORT=20
+
+PHP7_VERSION=7.4
+PHP7_PORT_FPM=9001
+PHP7_PORT_XDEBUG=9991
+PHP7_PATH_ROOT=/usr/local/etc
+PHP7_SSH_GROUP=sftp
+PHP7_SSH_PORT=21
 
 APACHE_VERSION=2.4
 APACHE_PORT_HTTP=80
 APACHE_PORT_HTTPS=443
 APACHE_PATH_ROOT=/usr/local/apache2
-
-NODEJS_VERSION=12.17.0
-NODEJS_PORT_HTTP=1080
-NODEJS_PORT_HTTPS=1443
-NODEJS_PATH_ROOT=/home/node/app
 
 MYSQL_VERSION=5.7
 MYSQL_PORT=3306
@@ -33,3 +37,10 @@ POSTGRES_VERSION=10.13
 POSTGRES_PORT=5432
 POSTGRES_USER=root
 POSTGRES_PASSWORD=Password1
+
+NODEJS_VERSION=12.17.0
+NODEJS_PORT_HTTP=1080
+NODEJS_PORT_HTTPS=1443
+NODEJS_PORT_VUE=8000
+NODEJS_PORT_VUE_APP=8080
+NODEJS_PATH_ROOT=/home/node/app
