--- a/_system/virtual_host/php7.conf
+++ b/_system/virtual_host/php7.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
-    ServerAdmin cimo@localhost
-    ServerName localhost
-    ServerAlias localhost
+    ServerAdmin cimo@localhost-php7
+    ServerName localhost-php7
+    ServerAlias localhost-php7
 
     Protocols h2 h2c http/1.1
     H2Push on
@@ -20,7 +20,7 @@
     DirectoryIndex index.php index.html
 
     <FilesMatch \.php$>
-        SetHandler "proxy:fcgi://php_container:${PHP_PORT_FPM}"
+        SetHandler "proxy:fcgi://php7_container:${PHP7_PORT_FPM}"
     </FilesMatch>
 
     <FilesMatch ".(jpg|jpeg|png|gif|ico|svg|css|js|eot|ttf|woff|woff2)$">
@@ -74,9 +74,9 @@
 </VirtualHost>
 
 <VirtualHost *:443>
-    ServerAdmin cimo@localhost
-    ServerName localhost
-    ServerAlias localhost
+    ServerAdmin cimo@localhost-php7
+    ServerName localhost-php7
+    ServerAlias localhost-php7
 
     Protocols h2 h2c http/1.1
     H2Push on
@@ -95,7 +95,7 @@
     DirectoryIndex index.php index.html
 
     <FilesMatch \.php$>
-        SetHandler "proxy:fcgi://php_container:${PHP_PORT_FPM}"
+        SetHandler "proxy:fcgi://php7_container:${PHP7_PORT_FPM}"
     </FilesMatch>
 
     <FilesMatch ".(jpg|jpeg|png|gif|ico|svg|css|js|eot|ttf|woff|woff2)$">
