--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,10 @@
 version: '3.8'
 services:
-  php_container:
-    container_name: Php_${PHP_VERSION}-fpm
+  php5_container:
+    container_name: Php_${PHP5_VERSION}-fpm
     build:
-      context: ${PATH_ROOT}/_system/docker
-      dockerfile: Dockerfile_php
+      context: ${PATH_ROOT}/ow_system/docker
+      dockerfile: Dockerfile_php5
       args:
         USER_NAME: ${USER_NAME}
         USER_PASSWORD: ${USER_PASSWORD}
@@ -13,12 +13,12 @@ services:
         WEB_USER_GROUP: ${WEB_USER_GROUP}
         PATH_ROOT: ${PATH_ROOT}
         TIMEZONE: ${TIMEZONE}
-        SSH_GROUP: ${SSH_GROUP}
-        SSH_PORT: ${SSH_PORT}
-        PHP_VERSION: ${PHP_VERSION}
-        PHP_PORT_FPM: ${PHP_PORT_FPM}
-        PHP_PORT_XDEBUG: ${PHP_PORT_XDEBUG}
-        PHP_PATH_ROOT: ${PHP_PATH_ROOT}
+        PHP5_VERSION: ${PHP5_VERSION}
+        PHP5_PORT_FPM: ${PHP5_PORT_FPM}
+        PHP5_PORT_XDEBUG: ${PHP5_PORT_XDEBUG}
+        PHP5_PATH_ROOT: ${PHP5_PATH_ROOT}
+        PHP5_SSH_GROUP: ${PHP5_SSH_GROUP}
+        PHP5_SSH_PORT: ${PHP5_SSH_PORT}
     environment:
       USER_NAME: ${USER_NAME}
       USER_PASSWORD: ${USER_PASSWORD}
@@ -27,22 +27,62 @@ services:
       WEB_USER_GROUP: ${WEB_USER_GROUP}
       PATH_ROOT: ${PATH_ROOT}
       TIMEZONE: ${TIMEZONE}
-      SSH_GROUP: ${SSH_GROUP}
-      SSH_PORT: ${SSH_PORT}
-      PHP_VERSION: ${PHP_VERSION}
-      PHP_PORT_FPM: ${PHP_PORT_FPM}
-      PHP_PORT_XDEBUG: ${PHP_PORT_XDEBUG}
-      PHP_PATH_ROOT: ${PHP_PATH_ROOT}
+      PHP5_VERSION: ${PHP5_VERSION}
+      PHP5_PORT_FPM: ${PHP5_PORT_FPM}
+      PHP5_PORT_XDEBUG: ${PHP5_PORT_XDEBUG}
+      PHP5_PATH_ROOT: ${PHP5_PATH_ROOT}
+      PHP5_SSH_GROUP: ${PHP5_SSH_GROUP}
+      PHP5_SSH_PORT: ${PHP5_SSH_PORT}
     ports:
-      - ${SSH_PORT}:22
-      - ${PHP_PORT_FPM}:9000
-      - ${PHP_PORT_XDEBUG}:9999
+      - ${PHP5_SSH_PORT}:22
+      - ${PHP5_PORT_FPM}:9000
+      - ${PHP5_PORT_XDEBUG}:9999
+    volumes:
+      - ${PATH_ROOT}:/home/${WWW_USER_NAME}/www
+    
+  php7_container:
+    container_name: Php_${PHP7_VERSION}-fpm
+    build:
+      context: ${PATH_ROOT}/ow_system/docker
+      dockerfile: Dockerfile_php7
+      args:
+        USER_NAME: ${USER_NAME}
+        USER_PASSWORD: ${USER_PASSWORD}
+        WWW_USER_NAME: ${WWW_USER_NAME}
+        WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
+        WEB_USER_GROUP: ${WEB_USER_GROUP}
+        PATH_ROOT: ${PATH_ROOT}
+        TIMEZONE: ${TIMEZONE}
+        PHP7_VERSION: ${PHP7_VERSION}
+        PHP7_PORT_FPM: ${PHP7_PORT_FPM}
+        PHP7_PORT_XDEBUG: ${PHP7_PORT_XDEBUG}
+        PHP7_PATH_ROOT: ${PHP7_PATH_ROOT}
+        PHP7_SSH_GROUP: ${PHP7_SSH_GROUP}
+        PHP7_SSH_PORT: ${PHP7_SSH_PORT}
+    environment:
+      USER_NAME: ${USER_NAME}
+      USER_PASSWORD: ${USER_PASSWORD}
+      WWW_USER_NAME: ${WWW_USER_NAME}
+      WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
+      WEB_USER_GROUP: ${WEB_USER_GROUP}
+      PATH_ROOT: ${PATH_ROOT}
+      TIMEZONE: ${TIMEZONE}
+      PHP7_VERSION: ${PHP7_VERSION}
+      PHP7_PORT_FPM: ${PHP7_PORT_FPM}
+      PHP7_PORT_XDEBUG: ${PHP7_PORT_XDEBUG}
+      PHP7_PATH_ROOT: ${PHP7_PATH_ROOT}
+      PHP7_SSH_GROUP: ${PHP7_SSH_GROUP}
+      PHP7_SSH_PORT: ${PHP7_SSH_PORT}
+    ports:
+      - ${PHP7_SSH_PORT}:22
+      - ${PHP7_PORT_FPM}:9000
+      - ${PHP7_PORT_XDEBUG}:9999
     volumes:
       - ${PATH_ROOT}:/home/${WWW_USER_NAME}/www
   apache_container:
     container_name: Apache_${APACHE_VERSION}
     build:
-      context: ${PATH_ROOT}/_system/docker
+      context: ${PATH_ROOT}/ow_system/docker
       dockerfile: Dockerfile_apache
       args:
         WWW_USER_NAME: ${WWW_USER_NAME}
@@ -54,10 +94,8 @@ services:
         APACHE_PORT_HTTP: ${APACHE_PORT_HTTP}
         APACHE_PORT_HTTPS: ${APACHE_PORT_HTTPS}
         APACHE_PATH_ROOT: ${APACHE_PATH_ROOT}
-        PHP_VERSION: ${PHP_VERSION}
-        PHP_PORT_FPM: ${PHP_PORT_FPM}
-        PHP_PORT_XDEBUG: ${PHP_PORT_XDEBUG}
-        PHP_PATH_ROOT: ${PHP_PATH_ROOT}
+        PHP5_PORT_FPM: ${PHP5_PORT_FPM}
+        PHP7_PORT_FPM: ${PHP7_PORT_FPM}
     environment:
       WWW_USER_NAME: ${WWW_USER_NAME}
       WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
@@ -68,10 +106,8 @@ services:
       APACHE_PORT_HTTP: ${APACHE_PORT_HTTP}
       APACHE_PORT_HTTPS: ${APACHE_PORT_HTTPS}
       APACHE_PATH_ROOT: ${APACHE_PATH_ROOT}
-      PHP_VERSION: ${PHP_VERSION}
-      PHP_PORT_FPM: ${PHP_PORT_FPM}
-      PHP_PORT_XDEBUG: ${PHP_PORT_XDEBUG}
-      PHP_PATH_ROOT: ${PHP_PATH_ROOT}
+      PHP5_PORT_FPM: ${PHP5_PORT_FPM}
+      PHP7_PORT_FPM: ${PHP7_PORT_FPM}
     ports:
       - ${APACHE_PORT_HTTP}:80
       - ${APACHE_PORT_HTTPS}:443
@@ -79,11 +115,12 @@ services:
       - ${PATH_ROOT}:/home/${WWW_USER_NAME}/www
       - ${PATH_ROOT}:${APACHE_PATH_ROOT}/htdocs
     depends_on:
-      - php_container
+      - php5_container
+      - php7_container
   mysql_container:
     container_name: MySql_${MYSQL_VERSION}
     build:
-      context: ${PATH_ROOT}/_system/docker
+      context: ${PATH_ROOT}/ow_system/docker
       dockerfile: Dockerfile_mysql
       args:
         WWW_USER_NAME: ${WWW_USER_NAME}
@@ -116,7 +153,7 @@ services:
   postgresql_container:
     container_name: PostgreSql_${POSTGRES_VERSION}
     build:
-      context: ${PATH_ROOT}/_system/docker
+      context: ${PATH_ROOT}/ow_system/docker
       dockerfile: Dockerfile_postgresql
       args:
         WWW_USER_NAME: ${WWW_USER_NAME}
@@ -145,10 +182,9 @@ services:
     depends_on:
       - apache_container
   nodejs_container:
-    command: "tail -f /dev/null"
     container_name: NodeJs_${NODEJS_VERSION}
     build:
-      context: ${PATH_ROOT}/_system/docker
+      context: ${PATH_ROOT}/ow_system/docker
       dockerfile: Dockerfile_nodejs
       args:
         PATH_ROOT: ${PATH_ROOT}
@@ -156,14 +192,22 @@ services:
         NODEJS_VERSION: ${NODEJS_VERSION}
         NODEJS_PORT_HTTP: ${NODEJS_PORT_HTTP}
         NODEJS_PORT_HTTPS: ${NODEJS_PORT_HTTPS}
+        NODEJS_PORT_VUE: ${NODEJS_PORT_VUE}
+        NODEJS_PORT_VUE_APP: ${NODEJS_PORT_VUE_APP}
+        NODEJS_PATH_ROOT: ${NODEJS_PATH_ROOT}
     environment:
         PATH_ROOT: ${PATH_ROOT}
         TIMEZONE: ${TIMEZONE}
         NODEJS_VERSION: ${NODEJS_VERSION}
         NODEJS_PORT_HTTP: ${NODEJS_PORT_HTTP}
         NODEJS_PORT_HTTPS: ${NODEJS_PORT_HTTPS}
+        NODEJS_PORT_VUE: ${NODEJS_PORT_VUE}
+        NODEJS_PORT_VUE_APP: ${NODEJS_PORT_VUE_APP}
+        NODEJS_PATH_ROOT: ${NODEJS_PATH_ROOT}
     ports:
       - ${NODEJS_PORT_HTTP}:1080
       - ${NODEJS_PORT_HTTPS}:1443
+      - ${NODEJS_PORT_VUE}:8000
+      - ${NODEJS_PORT_VUE_APP}:8080
     volumes:
       - ${PATH_ROOT}:${NODEJS_PATH_ROOT}
