--- a/ow_system/docker/Dockerfile_nodejs
+++ b/ow_system/docker/Dockerfile_nodejs
@@ -1,25 +1,21 @@
-ARG APACHE_VERSION
+ARG NODEJS_VERSION
 
-FROM httpd:${APACHE_VERSION}
+FROM node:${NODEJS_VERSION}
 
-ARG WWW_USER_NAME
-ARG WWW_USER_PASSWORD
-ARG WEB_USER_GROUP
 ARG PATH_ROOT
 ARG TIMEZONE
-ARG APACHE_PORT_HTTP
-ARG APACHE_PORT_HTTPS
-ARG APACHE_PATH_ROOT
-ARG PHP_VERSION
-ARG PHP_PORT_FPM
-ARG PHP_PORT_XDEBUG
-ARG PHP_PATH_ROOT
+ARG NODEJS_PORT_HTTP
+ARG NODEJS_PORT_HTTPS
+ARG NODEJS_PORT_VUE
+ARG NODEJS_PORT_VUE_APP
+ARG NODEJS_PATH_ROOT
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV DEBCONF_NOWARNINGS=yes
+ENV NODE_ENV=development
 
-COPY ${PATH_ROOT}/httpd.conf ${APACHE_PATH_ROOT}/conf/httpd.conf
 COPY ${PATH_ROOT}/certificate/. /etc/certificate/
+COPY ${PATH_ROOT}/entrypoint_nodejs.sh /usr/local/bin/entrypoint.sh
 
 # System
 RUN cd ~ \
@@ -30,10 +26,15 @@ tzdata \
 # Time
 && ln -sf /usr/share/zoneinfo/${TIMEZONE} /etc/localtime \
 && dpkg-reconfigure -f noninteractive tzdata \
+# Npm
+&& npm install -g pm2 \
+&& npm install -g @vue/cli \
 # Clean
 && rm -rf /var/lib/apt/lists/* \
 && apt-get clean -y \
 && apt-get autoclean -y \
 && apt-get autoremove -y
 
-EXPOSE ${APACHE_PORT_HTTP} ${APACHE_PORT_HTTPS}
+ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
+
+EXPOSE ${NODEJS_PORT_HTTP} ${NODEJS_PORT_HTTPS} ${NODEJS_PORT_VUE} ${NODEJS_PORT_VUE_APP}
