--- a/ow_system/docker/Dockerfile_php7
+++ b/ow_system/docker/Dockerfile_php7
@@ -1,6 +1,6 @@
-ARG PHP_VERSION
+ARG PHP7_VERSION
 
-FROM php:${PHP_VERSION}-fpm
+FROM php:${PHP7_VERSION}-fpm
 
 ARG USER_NAME
 ARG USER_PASSWORD
@@ -9,17 +9,17 @@ ARG WWW_USER_PASSWORD
 ARG WEB_USER_GROUP
 ARG PATH_ROOT
 ARG TIMEZONE
-ARG SSH_GROUP
-ARG SSH_PORT
-ARG PHP_PORT_FPM
-ARG PHP_PORT_XDEBUG
-ARG PHP_PATH_ROOT
+ARG PHP7_PORT_FPM
+ARG PHP7_PORT_XDEBUG
+ARG PHP7_PATH_ROOT
+ARG PHP7_SSH_GROUP
+ARG PHP7_SSH_PORT
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV DEBCONF_NOWARNINGS=yes
 
-COPY ${PATH_ROOT}/zz-docker.conf ${PHP_PATH_ROOT}/php-fpm.d/zz-docker.conf
-COPY ${PATH_ROOT}/override.ini ${PHP_PATH_ROOT}/php/conf.d/override.ini
+COPY ${PATH_ROOT}/zz-docker_php7.conf ${PHP7_PATH_ROOT}/php-fpm.d/zz-docker.conf
+COPY ${PATH_ROOT}/override.ini ${PHP7_PATH_ROOT}/php/conf.d/override.ini
 COPY ${PATH_ROOT}/sshd_config /etc/ssh/sshd_config
 COPY ${PATH_ROOT}/key/id_rsa /tmp/key/id_rsa
 COPY ${PATH_ROOT}/key/authorized_keys /tmp/key/authorized_keys
@@ -29,7 +29,7 @@ COPY ${PATH_ROOT}/entrypoint_php.sh /usr/local/bin/entrypoint.sh
 RUN cd ~ \
 && mkdir /var/run/sshd \
 && chmod +x /usr/local/bin/entrypoint.sh \
-&& cp ${PHP_PATH_ROOT}/php/php.ini-production ${PHP_PATH_ROOT}/php/php.ini \
+&& cp ${PHP7_PATH_ROOT}/php/php.ini-production ${PHP7_PATH_ROOT}/php/php.ini \
 && apt-get update && apt-get install -y --no-install-recommends \
 sudo \
 nano \
@@ -65,7 +65,7 @@ libpq-dev \
 && chmod 600 /home/${USER_NAME}/.ssh/authorized_keys \
 && chown -R ${USER_NAME}:sudo /home/${USER_NAME}/.ssh \
 # User www
-&& useradd --home /home/${WWW_USER_NAME} --gid ${WEB_USER_GROUP} --groups ${SSH_GROUP} --shell /bin/false -m ${WWW_USER_NAME} \
+&& useradd --home /home/${WWW_USER_NAME} --gid ${WEB_USER_GROUP} --groups ${PHP7_SSH_GROUP} --shell /bin/false -m ${WWW_USER_NAME} \
 && echo "${WWW_USER_NAME}:${WWW_USER_PASSWORD}" | chpasswd \
 && chown root:root /home/${WWW_USER_NAME} \
 && mkdir /home/${WWW_USER_NAME}/.ssh \
@@ -80,42 +80,35 @@ libpq-dev \
 && ln -sf /usr/share/zoneinfo/${TIMEZONE} /etc/localtime \
 && dpkg-reconfigure -f noninteractive tzdata \
 # Extension
-&& cd /tmp \
-&& git clone https://git.php.net/repository/pecl/networking/ssh2.git \
-&& cd /tmp/ssh2 \
-&& phpize \
-&& ./configure \
-&& make \
-&& make install \
-&& echo "extension=ssh2.so" >> ${PHP_PATH_ROOT}/php/conf.d/ext-ssh2.ini \
-&& rm -rf /tmp/ssh2 \
-&& cd ~ \
-&& pecl install apcu \
-&& pecl install xdebug \
-&& docker-php-ext-configure gd --with-freetype --with-jpeg \
+&& pear config-set php_ini ${PHP7_PATH_ROOT}/php/php.ini \
+&& pear config-set php_bin /usr/local/bin \
+&& echo "\n" | pecl install ssh2-1.2 \
+&& echo "\n" | pecl install apcu-5.1.18 \
+&& echo "\n" | pecl install xdebug-2.9.6 \
+&& docker-php-ext-configure gd --with-freetype=/usr/include --with-jpeg=/usr/include \
 && docker-php-ext-install gd \
 && docker-php-ext-install intl \
 && docker-php-ext-install opcache \
 && docker-php-ext-install zip \
 && docker-php-ext-install pdo_mysql \
 && docker-php-ext-install pdo_pgsql \
-&& docker-php-ext-enable apcu \
-&& docker-php-ext-enable xdebug \
 # Ini file setting
-&& echo "opcache.enable=1 \n \
+&& echo "\n\n \
+opcache.enable=1 \n \
 opcache.memory_consumption=256 \n \
 opcache.max_accelerated_files=20000 \n \
 opcache.revalidate_freq=0 \n \
 opcache.validate_timestamps=0 \n \
 opcache.interned_strings_buffer=16 \n \
-opcache.fast_shutdown=1" >> ${PHP_PATH_ROOT}/php/conf.d/docker-php-ext-opcache.ini \
-&& echo "xdebug.remote_enable=on \n \
+opcache.fast_shutdown=1" >> ${PHP7_PATH_ROOT}/php/conf.d/override.ini \
+&& echo "\n \
+xdebug.remote_enable=on \n \
 xdebug.remote_handler=dbgp \n \
 xdebug.remote_mode=req \n \
 xdebug.remote_host=php_container \n \
-xdebug.remote_port=9999 \n \
+xdebug.remote_port=${PHP7_PORT_XDEBUG} \n \
 xdebug.remote_log=/tmp/xdebug.log \n \
-xdebug.max_nesting_level=1000" >> ${PHP_PATH_ROOT}/php/conf.d/docker-php-ext-xdebug.ini \
+xdebug.max_nesting_level=1000" >> ${PHP7_PATH_ROOT}/php/conf.d/override.ini \
 # Composer
 && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer \
 # NodeJs
@@ -142,4 +135,4 @@ xdebug.max_nesting_level=1000" >> ${PHP_PATH_ROOT}/php/conf.d/docker-php-ext-xde
 
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 
-EXPOSE ${SSH_PORT} ${PHP_PORT_FPM} ${PHP_PORT_XDEBUG}
+EXPOSE ${PHP7_SSH_PORT} ${PHP7_PORT_FPM} ${PHP7_PORT_XDEBUG}
