--- a/ow_system/docker/zz-docker_php7.conf
+++ b/ow_system/docker/zz-docker_php7.conf
@@ -4,7 +4,7 @@ daemonize = no
 [www]
 user = ${WEB_USER_GROUP}
 group = ${WEB_USER_GROUP}
-listen = php_container:${PHP_PORT_FPM}
+listen = php7_container:${PHP7_PORT_FPM}
 pm = dynamic
 pm.max_children = 40
 pm.start_servers = 2
