Ui - Work in progress...

--- a/ow_system/docker/Dockerfile_nodejs
+++ b/ow_system/docker/Dockerfile_nodejs
@@ -19,6 +19,7 @@ COPY ${PATH_ROOT}/entrypoint_nodejs.sh /usr/local/bin/entrypoint.sh
 
 # System
 RUN cd ~ \
+&& chmod +x /usr/local/bin/entrypoint.sh \
 && apt-get update && apt-get install -y --no-install-recommends \
 sudo \
 nano \
@@ -27,8 +28,10 @@ tzdata \
 && ln -sf /usr/share/zoneinfo/${TIMEZONE} /etc/localtime \
 && dpkg-reconfigure -f noninteractive tzdata \
 # Npm
-&& npm install -g pm2 \
 && npm install -g @vue/cli \
+&& npm install -g terser \
+&& npm install -g sass \
+&& npm install -g pm2 \
 # Clean
 && rm -rf /var/lib/apt/lists/* \
 && apt-get clean -y \
