--- a/ow_system/docker/httpd.conf
+++ b/ow_system/docker/httpd.conf
@@ -1,6 +1,6 @@
 ServerName localhost
-ServerSignature Off
-ServerTokens Prod
+ServerSignature off
+ServerTokens prod
 
 User ${WEB_USER_GROUP}
 Group ${WEB_USER_GROUP}
