--- a/ow_system/docker/Dockerfile_php5
+++ b/ow_system/docker/Dockerfile_php5
@@ -115,9 +115,7 @@ xdebug.max_nesting_level=1000" >> ${PHP5_PATH_ROOT}/php/conf.d/override.ini \
 && curl -sL https://deb.nodesource.com/setup_12.x | sudo -E bash - \
 && apt-get install -y --no-install-recommends nodejs \
 && npm update -g npm \
-## Npm
-&& npm install -g terser \
-&& npm install -g sass \
+## Npm (Selenium)
 #&& wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add \
 #&& echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list \
 #&& apt-get update \
