--- a/docker/Dockerfile_apache
+++ b/docker/Dockerfile_apache
@@ -11,13 +11,15 @@ ARG APACHE_PORT_HTTP
 ARG APACHE_PORT_HTTPS
 ARG APACHE_PATH_ROOT
 ARG PHP5_PORT_FPM
+ARG PHP5_VH_NAME
 ARG PHP7_PORT_FPM
+ARG PHP7_VH_NAME
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV DEBCONF_NOWARNINGS=yes
 
-COPY ${PATH_ROOT}/httpd.conf ${APACHE_PATH_ROOT}/conf/httpd.conf
 COPY ${PATH_ROOT}/certificate/. /etc/certificate/
+COPY ${PATH_ROOT}/httpd.conf ${APACHE_PATH_ROOT}/conf/httpd.conf
 
 # System
 RUN cd ~ \
