--- a/docker/Dockerfile_nodejs
+++ b/docker/Dockerfile_nodejs
@@ -37,6 +37,8 @@ tzdata \
 ## Selenium
 #&& wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add \
 #&& echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list \
+#&& apt-key adv --keyserver keyserver.ubuntu.com --recv-keys A6DCF7707EBC211F \
+#&& echo "deb http://ppa.launchpad.net/ubuntu-mozilla-security/ppa/ubuntu bionic main" >> /etc/apt/sources.list.d/firefox.list \
 #&& apt-get update \
 #&& apt-get install -y --no-install-recommends google-chrome-stable firefox \
 #&& npm install -g selenium-side-runner --unsafe-perm=true --allow-root \
