--- a/virtual_host/php5.conf
+++ b/virtual_host/php5.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
-    ServerAdmin cimo@localhost-php5
-    ServerName localhost-php5
-    ServerAlias localhost-php5
+    ServerAdmin cimo@${PHP5_VH_NAME}
+    ServerName ${PHP5_VH_NAME}
+    ServerAlias ${PHP5_VH_NAME}
 
     Protocols h2 h2c http/1.1
     H2Push on
@@ -74,9 +74,9 @@
 </VirtualHost>
 
 <VirtualHost *:443>
-    ServerAdmin cimo@localhost-php5
-    ServerName localhost-php5
-    ServerAlias localhost-php5
+    ServerAdmin cimo@${PHP5_VH_NAME}
+    ServerName ${PHP5_VH_NAME}
+    ServerAlias ${PHP5_VH_NAME}
 
     Protocols h2 h2c http/1.1
     H2Push on
