--- a/virtual_host/php7.conf
+++ b/virtual_host/php7.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
-    ServerAdmin cimo@localhost-php7
-    ServerName localhost-php7
-    ServerAlias localhost-php7
+    ServerAdmin cimo@${PHP7_VH_NAME}
+    ServerName ${PHP7_VH_NAME}
+    ServerAlias ${PHP7_VH_NAME}
 
     Protocols h2 h2c http/1.1
     H2Push on
@@ -74,9 +74,9 @@
 </VirtualHost>
 
 <VirtualHost *:443>
-    ServerAdmin cimo@localhost-php7
-    ServerName localhost-php7
-    ServerAlias localhost-php7
+    ServerAdmin cimo@${PHP7_VH_NAME}
+    ServerName ${PHP7_VH_NAME}
+    ServerAlias ${PHP7_VH_NAME}
 
     Protocols h2 h2c http/1.1
     H2Push on
