--- a/docker/Dockerfile_php5
+++ b/docker/Dockerfile_php5
@@ -12,17 +12,13 @@ ARG TIMEZONE
 ARG PHP5_PORT_FPM
 ARG PHP5_PORT_XDEBUG
 ARG PHP5_PATH_ROOT
-ARG PHP5_SSH_GROUP
-ARG PHP5_SSH_PORT
+ARG PHP5_VH_NAME
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV DEBCONF_NOWARNINGS=yes
 
 COPY ${PATH_ROOT}/zz-docker_php5.conf ${PHP5_PATH_ROOT}/php-fpm.d/zz-docker.conf
 COPY ${PATH_ROOT}/override.ini ${PHP5_PATH_ROOT}/php/conf.d/override.ini
-COPY ${PATH_ROOT}/sshd_config /etc/ssh/sshd_config
-COPY ${PATH_ROOT}/key/id_rsa /tmp/key/id_rsa
-COPY ${PATH_ROOT}/key/authorized_keys /tmp/key/authorized_keys
 COPY ${PATH_ROOT}/entrypoint_php.sh /usr/local/bin/entrypoint.sh
 
 # System
@@ -35,7 +31,6 @@ sudo \
 nano \
 tzdata \
 make \
-openssh-server \
 git \
 zip \
 unzip \
@@ -52,30 +47,13 @@ zlib1g-dev \
 libxml2-dev \
 libpq-dev \
 libmagickwand-dev \
-# Group
-&& addgroup sftp \
 # User sudo
 && useradd --home /home/${USER_NAME} --gid sudo --shell /bin/bash -m ${USER_NAME} \
 && echo "${USER_NAME}:${USER_PASSWORD}" | chpasswd \
-&& echo "${USER_NAME} ALL=(ALL:ALL) NOPASSWD: ALL" >> /etc/sudoers \
-&& mkdir /home/${USER_NAME}/.ssh \
-&& cp /tmp/key/id_rsa /home/${USER_NAME}/.ssh/id_rsa \
-&& cp /tmp/key/authorized_keys /home/${USER_NAME}/.ssh/authorized_keys \
-&& chmod 700 /home/${USER_NAME}/.ssh \
-&& chmod 600 /home/${USER_NAME}/.ssh/id_rsa \
-&& chmod 600 /home/${USER_NAME}/.ssh/authorized_keys \
-&& chown -R ${USER_NAME}:sudo /home/${USER_NAME}/.ssh \
 # User www
-&& useradd --home /home/${WWW_USER_NAME} --gid ${WEB_USER_GROUP} --groups ${PHP5_SSH_GROUP} --shell /bin/false -m ${WWW_USER_NAME} \
+&& useradd --home /home/${WWW_USER_NAME} --gid ${WEB_USER_GROUP} --shell /bin/false -m ${WWW_USER_NAME} \
 && echo "${WWW_USER_NAME}:${WWW_USER_PASSWORD}" | chpasswd \
 && chown root:root /home/${WWW_USER_NAME} \
-&& mkdir /home/${WWW_USER_NAME}/.ssh \
-&& cp /tmp/key/id_rsa /home/${WWW_USER_NAME}/.ssh/id_rsa \
-&& cp /tmp/key/authorized_keys /home/${WWW_USER_NAME}/.ssh/authorized_keys \
-&& chmod 700 /home/${WWW_USER_NAME}/.ssh \
-&& chmod 600 /home/${WWW_USER_NAME}/.ssh/id_rsa \
-&& chmod 600 /home/${WWW_USER_NAME}/.ssh/authorized_keys \
-&& chown -R ${WWW_USER_NAME}:${WEB_USER_GROUP} /home/${WWW_USER_NAME}/.ssh \
 && mkdir /home/${WWW_USER_NAME}/www \
 # Time
 && ln -sf /usr/share/zoneinfo/${TIMEZONE} /etc/localtime \
@@ -118,9 +96,8 @@ xdebug.max_nesting_level=1000" >> ${PHP5_PATH_ROOT}/php/conf.d/override.ini \
 && rm -rf /var/lib/apt/lists/* \
 && apt-get clean -y \
 && apt-get autoclean -y \
-&& apt-get autoremove -y \
-&& rm -rf /tmp/key
+&& apt-get autoremove -y
 
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 
-EXPOSE ${PHP5_SSH_PORT} ${PHP5_PORT_FPM} ${PHP5_PORT_XDEBUG}
+EXPOSE ${PHP5_PORT_FPM} ${PHP5_PORT_XDEBUG}
