--- a/.env
+++ b/.env
@@ -7,6 +7,9 @@ WWW_USER_PASSWORD=Password1
 WEB_USER_GROUP=www-data
 PATH_ROOT=.
 TIMEZONE=Asia/Tokyo
+CERTIFICATE_FILE=/etc/certificate/Encrypted.crt
+CERTIFICATE_KEY=/etc/certificate/Encrypted.key
+CERTIFICATE_CHAIN=/etc/certificate/Encrypted.csr
 
 PHP5_VERSION=5.6
 PHP5_PORT_FPM=9001
@@ -36,10 +39,10 @@ POSTGRES_PORT=5432
 POSTGRES_USER=root
 POSTGRES_PASSWORD=Password1
 
+NODEJS_OS_VERSION=18.04
 NODEJS_VERSION=12.17.0
 NODEJS_PORT_HTTP=1080
 NODEJS_PORT_HTTPS=1443
 NODEJS_PORT_VUE=8000
 NODEJS_PORT_VUE_APP=8181
-NODEJS_PATH_ROOT=/home/node/app
 NODEJS_PATH_SERVER=/home/node/server
