--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -186,27 +186,27 @@ services:
       args:
         PATH_ROOT: ${PATH_ROOT}
         TIMEZONE: ${TIMEZONE}
+        NODEJS_OS_VERSION: ${NODEJS_OS_VERSION}
         NODEJS_VERSION: ${NODEJS_VERSION}
         NODEJS_PORT_HTTP: ${NODEJS_PORT_HTTP}
         NODEJS_PORT_HTTPS: ${NODEJS_PORT_HTTPS}
         NODEJS_PORT_VUE: ${NODEJS_PORT_VUE}
         NODEJS_PORT_VUE_APP: ${NODEJS_PORT_VUE_APP}
-        NODEJS_PATH_ROOT: ${NODEJS_PATH_ROOT}
         NODEJS_PATH_SERVER: ${NODEJS_PATH_SERVER}
     environment:
-        PATH_ROOT: ${PATH_ROOT}
-        TIMEZONE: ${TIMEZONE}
-        NODEJS_VERSION: ${NODEJS_VERSION}
-        NODEJS_PORT_HTTP: ${NODEJS_PORT_HTTP}
-        NODEJS_PORT_HTTPS: ${NODEJS_PORT_HTTPS}
-        NODEJS_PORT_VUE: ${NODEJS_PORT_VUE}
-        NODEJS_PORT_VUE_APP: ${NODEJS_PORT_VUE_APP}
-        NODEJS_PATH_ROOT: ${NODEJS_PATH_ROOT}
-        NODEJS_PATH_SERVER: ${NODEJS_PATH_SERVER}
+      PATH_ROOT: ${PATH_ROOT}
+      TIMEZONE: ${TIMEZONE}
+      NODEJS_OS_VERSION: ${NODEJS_OS_VERSION}
+      NODEJS_VERSION: ${NODEJS_VERSION}
+      NODEJS_PORT_HTTP: ${NODEJS_PORT_HTTP}
+      NODEJS_PORT_HTTPS: ${NODEJS_PORT_HTTPS}
+      NODEJS_PORT_VUE: ${NODEJS_PORT_VUE}
+      NODEJS_PORT_VUE_APP: ${NODEJS_PORT_VUE_APP}
+      NODEJS_PATH_SERVER: ${NODEJS_PATH_SERVER}
     ports:
       - ${NODEJS_PORT_HTTP}:${NODEJS_PORT_HTTP}
       - ${NODEJS_PORT_HTTPS}:${NODEJS_PORT_HTTPS}
       - ${NODEJS_PORT_VUE}:${NODEJS_PORT_VUE}
       - ${NODEJS_PORT_VUE_APP}:${NODEJS_PORT_VUE_APP}
     volumes:
-      - ${PATH_ROOT}:${NODEJS_PATH_ROOT}
+      - ${PATH_ROOT}:/home/${WWW_USER_NAME}/www
