--- a/docker/httpd.conf
+++ b/docker/httpd.conf
@@ -5,8 +5,8 @@ ServerTokens prod
 User ${WEB_USER_GROUP}
 Group ${WEB_USER_GROUP}
 
-Listen 80
-Listen 443
+Listen ${APACHE_PORT_HTTP}
+Listen ${APACHE_PORT_HTTPS}
 
 LoadModule mpm_event_module modules/mod_mpm_event.so
 #LoadModule mpm_prefork_module modules/mod_mpm_prefork.so
