--- a/virtual_host/custom/localhost.conf
+++ b/virtual_host/custom/localhost.conf
@@ -108,9 +108,9 @@
         SSLEngine on
         SSLProxyEngine on
 
-        SSLCertificateFile /etc/certificate/Encrypted.crt
-        SSLCertificateKeyFile /etc/certificate/Encrypted.key
-        SSLCertificateChainFile /etc/certificate/Encrypted.csr
+        SSLCertificateFile ${CERTIFICATE_FILE}
+        SSLCertificateKeyFile ${CERTIFICATE_KEY}
+        SSLCertificateChainFile ${CERTIFICATE_CHAIN}
     </IfModule>
 
     <IfModule mod_rewrite.c>
