--- a/virtual_host/php5.conf
+++ b/virtual_host/php5.conf
@@ -132,9 +132,9 @@
         SSLEngine on
         SSLProxyEngine on
 
-        SSLCertificateFile /etc/certificate/Encrypted.crt
-        SSLCertificateKeyFile /etc/certificate/Encrypted.key
-        SSLCertificateChainFile /etc/certificate/Encrypted.csr
+        SSLCertificateFile ${CERTIFICATE_FILE}
+        SSLCertificateKeyFile ${CERTIFICATE_KEY}
+        SSLCertificateChainFile ${CERTIFICATE_CHAIN}
     </IfModule>
 
     <IfModule mod_rewrite.c>
