--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,10 +32,13 @@ services:
       PHP5_PATH_ROOT: ${PHP5_PATH_ROOT}
       PHP5_VH_NAME: ${PHP5_VH_NAME}
     ports:
-      - ${PHP5_PORT_FPM}:${PHP5_PORT_FPM}
-      - ${PHP5_PORT_XDEBUG}:${PHP5_PORT_XDEBUG}
+      - 127.0.0.1:${PHP5_PORT_FPM}:${PHP5_PORT_FPM}
+      - 127.0.0.1:${PHP5_PORT_XDEBUG}:${PHP5_PORT_XDEBUG}
     volumes:
-      - ${PATH_ROOT}:/home/${WWW_USER_NAME}/www
+      - ${PATH_ROOT}:/home/${WWW_USER_NAME}/root
+    networks:
+      one_workspace:
+        ipv4_address: ${PHP5_NETWORK_IP}
   php7_container:
     container_name: Php_${PHP7_VERSION}-fpm
     build:
@@ -68,10 +71,13 @@ services:
       PHP7_PATH_ROOT: ${PHP7_PATH_ROOT}
       PHP7_VH_NAME: ${PHP7_VH_NAME}
     ports:
-      - ${PHP7_PORT_FPM}:${PHP7_PORT_FPM}
-      - ${PHP7_PORT_XDEBUG}:${PHP7_PORT_XDEBUG}
+      - 127.0.0.1:${PHP7_PORT_FPM}:${PHP7_PORT_FPM}
+      - 127.0.0.1:${PHP7_PORT_XDEBUG}:${PHP7_PORT_XDEBUG}
     volumes:
-      - ${PATH_ROOT}:/home/${WWW_USER_NAME}/www
+      - ${PATH_ROOT}:/home/${WWW_USER_NAME}/root
+    networks:
+      one_workspace:
+        ipv4_address: ${PHP7_NETWORK_IP}
   apache_container:
     container_name: Apache_${APACHE_VERSION}
     build:
@@ -83,6 +89,10 @@ services:
         WEB_USER_GROUP: ${WEB_USER_GROUP}
         PATH_ROOT: ${PATH_ROOT}
         TIMEZONE: ${TIMEZONE}
+        CERTIFICATE_FILE: ${CERTIFICATE_FILE}
+        CERTIFICATE_KEY: ${CERTIFICATE_KEY}
+        CERTIFICATE_CHAIN: ${CERTIFICATE_CHAIN}
+        DOMAIN: ${DOMAIN}
         APACHE_VERSION: ${APACHE_VERSION}
         APACHE_PORT_HTTP: ${APACHE_PORT_HTTP}
         APACHE_PORT_HTTPS: ${APACHE_PORT_HTTPS}
@@ -97,6 +107,10 @@ services:
       WEB_USER_GROUP: ${WEB_USER_GROUP}
       PATH_ROOT: ${PATH_ROOT}
       TIMEZONE: ${TIMEZONE}
+      CERTIFICATE_FILE: ${CERTIFICATE_FILE}
+      CERTIFICATE_KEY: ${CERTIFICATE_KEY}
+      CERTIFICATE_CHAIN: ${CERTIFICATE_CHAIN}
+      DOMAIN: ${DOMAIN}
       APACHE_VERSION: ${APACHE_VERSION}
       APACHE_PORT_HTTP: ${APACHE_PORT_HTTP}
       APACHE_PORT_HTTPS: ${APACHE_PORT_HTTPS}
@@ -106,14 +120,17 @@ services:
       PHP7_PORT_FPM: ${PHP7_PORT_FPM}
       PHP7_VH_NAME: ${PHP7_VH_NAME}
     ports:
-      - ${APACHE_PORT_HTTP}:80
-      - ${APACHE_PORT_HTTPS}:443
+      - 127.0.0.1:${APACHE_PORT_HTTP}:80
+      - 127.0.0.1:${APACHE_PORT_HTTPS}:443
     volumes:
-      - ${PATH_ROOT}:/home/${WWW_USER_NAME}/www
+      - ${PATH_ROOT}:/home/${WWW_USER_NAME}/root
       - ${PATH_ROOT}:${APACHE_PATH_ROOT}/htdocs
     depends_on:
       - php5_container
       - php7_container
+    networks:
+      one_workspace:
+        ipv4_address: ${APACHE_NETWORK_IP}
   mysql_container:
     container_name: MySql_${MYSQL_VERSION}
     build:
@@ -142,11 +159,14 @@ services:
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     ports:
-      - ${MYSQL_PORT}:3306
+      - 127.0.0.1:${MYSQL_PORT}:3306
     volumes:
-      - ${PATH_ROOT}:/home/${WWW_USER_NAME}/www
+      - ${PATH_ROOT}:/home/${WWW_USER_NAME}/root
     depends_on:
       - apache_container
+    networks:
+      one_workspace:
+        ipv4_address: ${MYSQL_NETWORK_IP}
   postgresql_container:
     container_name: PostgreSql_${POSTGRES_VERSION}
     build:
@@ -173,40 +193,63 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
-      - ${POSTGRES_PORT}:5432
+      - 127.0.0.1:${POSTGRES_PORT}:5432
     volumes:
-      - ${PATH_ROOT}:/home/${WWW_USER_NAME}/www
+      - ${PATH_ROOT}:/home/${WWW_USER_NAME}/root
     depends_on:
       - apache_container
+    networks:
+      one_workspace:
+        ipv4_address: ${POSTGRES_NETWORK_IP}
   nodejs_container:
     container_name: NodeJs_${NODEJS_VERSION}
     build:
       context: ${PATH_ROOT}/docker
       dockerfile: Dockerfile_nodejs
       args:
+        WWW_USER_NAME: ${WWW_USER_NAME}
         PATH_ROOT: ${PATH_ROOT}
         TIMEZONE: ${TIMEZONE}
-        NODEJS_OS_VERSION: ${NODEJS_OS_VERSION}
+        CERTIFICATE_FILE: ${CERTIFICATE_FILE}
+        CERTIFICATE_KEY: ${CERTIFICATE_KEY}
+        CERTIFICATE_CHAIN: ${CERTIFICATE_CHAIN}
         NODEJS_VERSION: ${NODEJS_VERSION}
+        NODEJS_ENV: ${NODEJS_ENV}
+        NODEJS_SERVER_NAME: ${NODEJS_SERVER_NAME}
         NODEJS_PORT_HTTP: ${NODEJS_PORT_HTTP}
         NODEJS_PORT_HTTPS: ${NODEJS_PORT_HTTPS}
+        NODEJS_DIGEST_ENABLE: ${NODEJS_DIGEST_ENABLE}
         NODEJS_PORT_VUE: ${NODEJS_PORT_VUE}
         NODEJS_PORT_VUE_APP: ${NODEJS_PORT_VUE_APP}
-        NODEJS_PATH_SERVER: ${NODEJS_PATH_SERVER}
     environment:
+      WWW_USER_NAME: ${WWW_USER_NAME}
       PATH_ROOT: ${PATH_ROOT}
       TIMEZONE: ${TIMEZONE}
-      NODEJS_OS_VERSION: ${NODEJS_OS_VERSION}
+      CERTIFICATE_FILE: ${CERTIFICATE_FILE}
+      CERTIFICATE_KEY: ${CERTIFICATE_KEY}
+      CERTIFICATE_CHAIN: ${CERTIFICATE_CHAIN}
       NODEJS_VERSION: ${NODEJS_VERSION}
+      NODEJS_ENV: ${NODEJS_ENV}
+      NODEJS_SERVER_NAME: ${NODEJS_SERVER_NAME}
       NODEJS_PORT_HTTP: ${NODEJS_PORT_HTTP}
       NODEJS_PORT_HTTPS: ${NODEJS_PORT_HTTPS}
+      NODEJS_DIGEST_ENABLE: ${NODEJS_DIGEST_ENABLE}
       NODEJS_PORT_VUE: ${NODEJS_PORT_VUE}
       NODEJS_PORT_VUE_APP: ${NODEJS_PORT_VUE_APP}
-      NODEJS_PATH_SERVER: ${NODEJS_PATH_SERVER}
     ports:
-      - ${NODEJS_PORT_HTTP}:${NODEJS_PORT_HTTP}
-      - ${NODEJS_PORT_HTTPS}:${NODEJS_PORT_HTTPS}
-      - ${NODEJS_PORT_VUE}:${NODEJS_PORT_VUE}
-      - ${NODEJS_PORT_VUE_APP}:${NODEJS_PORT_VUE_APP}
+      - 127.0.0.1:${NODEJS_PORT_HTTP}:${NODEJS_PORT_HTTP}
+      - 127.0.0.1:${NODEJS_PORT_HTTPS}:${NODEJS_PORT_HTTPS}
+      - 127.0.0.1:${NODEJS_PORT_VUE}:${NODEJS_PORT_VUE}
+      - 127.0.0.1:${NODEJS_PORT_VUE_APP}:${NODEJS_PORT_VUE_APP}
     volumes:
-      - ${PATH_ROOT}:/home/${WWW_USER_NAME}/www
+      - ${PATH_ROOT}:/home/${WWW_USER_NAME}/root
+    networks:
+      one_workspace:
+        ipv4_address: ${NODEJS_NETWORK_IP}
+networks:
+  one_workspace:
+    driver: ${NETWORK_DRIVER}
+    ipam:
+      driver: default
+      config:
+        - subnet: ${NETWORK_SUB}
