--- a/virtual_host/php5.conf
+++ b/virtual_host/php5.conf
@@ -16,7 +16,7 @@
     KeepAliveTimeout 100
     MaxKeepAliveRequests 200
 
-    DocumentRoot /home/${WWW_USER_NAME}/www
+    DocumentRoot /home/${WWW_USER_NAME}/root
     DirectoryIndex index.php index.html
 
     <FilesMatch \.php$>
@@ -27,7 +27,7 @@
         Header set Cache-Control "max-age=31536000, public"
     </FilesMatch>
 
-    <Directory /home/${WWW_USER_NAME}/www>
+    <Directory /home/${WWW_USER_NAME}/root>
         Options +FollowSymLinks -Indexes -Includes -ExecCGI
 
         AllowOverride all
@@ -37,8 +37,8 @@
     #<Location />
     #   AuthType Digest
     #   AuthName "Auth - Digest"
-    #   AuthDigestDomain /home/${WWW_USER_NAME}/www
-    #   AuthUserFile /home/${WWW_USER_NAME}/www/.digest_htpasswd
+    #   AuthDigestDomain /home/${WWW_USER_NAME}/root
+    #   AuthUserFile /home/${WWW_USER_NAME}/root/.digest_htpasswd
     #   Require valid-user
     #</Location>
 
@@ -69,8 +69,8 @@
 
     # Log
     LogLevel error
-    ErrorLog /home/${WWW_USER_NAME}/www/error.log
-    #CustomLog /home/${WWW_USER_NAME}/www/custom.log combined
+    ErrorLog /home/${WWW_USER_NAME}/root/error.log
+    #CustomLog /home/${WWW_USER_NAME}/root/custom.log combined
 </VirtualHost>
 
 <VirtualHost *:443>
@@ -91,7 +91,7 @@
     KeepAliveTimeout 100
     MaxKeepAliveRequests 200
 
-    DocumentRoot /home/${WWW_USER_NAME}/www
+    DocumentRoot /home/${WWW_USER_NAME}/root
     DirectoryIndex index.php index.html
 
     <FilesMatch \.php$>
@@ -102,7 +102,7 @@
         Header set Cache-Control "max-age=31536000, public"
     </FilesMatch>
 
-    <Directory /home/${WWW_USER_NAME}/www>
+    <Directory /home/${WWW_USER_NAME}/root>
         SSLRequireSSL on
 
         Options +FollowSymLinks -Indexes -Includes -ExecCGI
@@ -114,8 +114,8 @@
     #<Location />
     #   AuthType Digest
     #   AuthName "Auth - Digest"
-    #   AuthDigestDomain /home/${WWW_USER_NAME}/www
-    #   AuthUserFile /home/${WWW_USER_NAME}/www/.digest_htpasswd
+    #   AuthDigestDomain /home/${WWW_USER_NAME}/root
+    #   AuthUserFile /home/${WWW_USER_NAME}/root/.digest_htpasswd
     #   Require valid-user
     #</Location>
 
@@ -132,9 +132,9 @@
         SSLEngine on
         SSLProxyEngine on
 
-        SSLCertificateFile ${CERTIFICATE_FILE}
-        SSLCertificateKeyFile ${CERTIFICATE_KEY}
-        SSLCertificateChainFile ${CERTIFICATE_CHAIN}
+        SSLCertificateFile /home/${WWW_USER_NAME}/root/certificate/${CERTIFICATE_FILE}
+        SSLCertificateKeyFile /home/${WWW_USER_NAME}/root/certificate/${CERTIFICATE_KEY}
+        SSLCertificateChainFile /home/${WWW_USER_NAME}/root/certificate/${CERTIFICATE_CHAIN}
     </IfModule>
 
     <IfModule mod_rewrite.c>
@@ -153,8 +153,8 @@
     # Log
     #LogLevel info mod_ssl.c:debug
     LogLevel error
-    ErrorLog /home/${WWW_USER_NAME}/www/error.log
-    #CustomLog /home/${WWW_USER_NAME}/www/custom.log combined
+    ErrorLog /home/${WWW_USER_NAME}/root/error.log
+    #CustomLog /home/${WWW_USER_NAME}/root/custom.log combined
 </VirtualHost>
 
 SSLProtocol all -SSLv3 -TLSv1 -TLSv1.1
