--- a/.env
+++ b/.env
@@ -7,42 +7,52 @@ WWW_USER_PASSWORD=Password1
 WEB_USER_GROUP=www-data
 PATH_ROOT=.
 TIMEZONE=Asia/Tokyo
-CERTIFICATE_FILE=/etc/certificate/Encrypted.crt
-CERTIFICATE_KEY=/etc/certificate/Encrypted.key
-CERTIFICATE_CHAIN=/etc/certificate/Encrypted.csr
+CERTIFICATE_FILE=selfsign/Encrypted.crt
+CERTIFICATE_KEY=selfsign/Encrypted.key
+CERTIFICATE_CHAIN=selfsign/Encrypted.csr
+DOMAIN=localhost
+NETWORK_DRIVER=bridge
+NETWORK_SUB=172.21.0.0/16
 
 PHP5_VERSION=5.6
 PHP5_PORT_FPM=9001
 PHP5_PORT_XDEBUG=9991
 PHP5_PATH_ROOT=/usr/local/etc
-PHP5_VH_NAME=localhost-php5
+PHP5_VH_NAME=php5
+PHP5_NETWORK_IP=172.21.0.2
 
 PHP7_VERSION=7.4
 PHP7_PORT_FPM=9002
 PHP7_PORT_XDEBUG=9992
 PHP7_PATH_ROOT=/usr/local/etc
-PHP7_VH_NAME=localhost-php7
+PHP7_VH_NAME=php7
+PHP7_NETWORK_IP=172.21.0.3
 
 APACHE_VERSION=2.4
 APACHE_PORT_HTTP=80
 APACHE_PORT_HTTPS=443
 APACHE_PATH_ROOT=/usr/local/apache2
+APACHE_NETWORK_IP=172.21.0.4
 
 MYSQL_VERSION=5.7
 MYSQL_PORT=3306
 MYSQL_ROOT_PASSWORD=Password1
 MYSQL_USER=user_1
 MYSQL_PASSWORD=Password1
+MYSQL_NETWORK_IP=172.21.0.5
 
 POSTGRES_VERSION=10.13
 POSTGRES_PORT=5432
-POSTGRES_USER=root
+POSTGRES_USER=user_1
 POSTGRES_PASSWORD=Password1
+POSTGRES_NETWORK_IP=172.21.0.6
 
-NODEJS_OS_VERSION=18.04
-NODEJS_VERSION=12.17.0
+NODEJS_VERSION=12.18.1
+NODEJS_ENV=development
+NODEJS_SERVER_NAME=nodejs_server_dev
 NODEJS_PORT_HTTP=1080
 NODEJS_PORT_HTTPS=1443
+NODEJS_DIGEST_ENABLE=false
+NODEJS_NETWORK_IP=172.21.0.7
 NODEJS_PORT_VUE=8000
 NODEJS_PORT_VUE_APP=8181
-NODEJS_PATH_SERVER=/home/node/server
