--- a/docker/Dockerfile_apache
+++ b/docker/Dockerfile_apache
@@ -7,6 +7,10 @@ ARG WWW_USER_PASSWORD
 ARG WEB_USER_GROUP
 ARG PATH_ROOT
 ARG TIMEZONE
+ARG CERTIFICATE_FILE
+ARG CERTIFICATE_KEY
+ARG CERTIFICATE_CHAIN
+ARG DOMAIN
 ARG APACHE_PORT_HTTP
 ARG APACHE_PORT_HTTPS
 ARG APACHE_PATH_ROOT
@@ -18,15 +22,21 @@ ARG PHP7_VH_NAME
 ENV DEBIAN_FRONTEND=noninteractive
 ENV DEBCONF_NOWARNINGS=yes
 
-COPY ${PATH_ROOT}/certificate/. /etc/certificate/
 COPY ${PATH_ROOT}/httpd.conf ${APACHE_PATH_ROOT}/conf/httpd.conf
 
 # System
 RUN cd ~ \
-&& apt-get update && apt-get install -y --no-install-recommends \
+&& apt-get update && apt-get install -y \
 sudo \
 nano \
 tzdata \
+curl \
+make \
+git \
+zip \
+unzip \
+cron \
+wget \
 # Time
 && ln -sf /usr/share/zoneinfo/${TIMEZONE} /etc/localtime \
 && dpkg-reconfigure -f noninteractive tzdata \
