--- a/virtual_host/localhost.conf
+++ b/virtual_host/localhost.conf
@@ -16,19 +16,27 @@
     KeepAliveTimeout 100
     MaxKeepAliveRequests 200
 
-    DocumentRoot /home/${WWW_USER_NAME}/www/ow_system/dist
+    DocumentRoot /home/${WWW_USER_NAME}/root/ow_system/dist
     DirectoryIndex index.html
 
     <FilesMatch ".(jpg|jpeg|png|gif|ico|svg|css|js|eot|ttf|woff|woff2)$">
         Header set Cache-Control "max-age=31536000, public"
     </FilesMatch>
 
-    <Directory /home/${WWW_USER_NAME}/www/ow_system/dist>
+    <Directory /home/${WWW_USER_NAME}/root/ow_system/dist>
         Options +FollowSymLinks -Indexes -Includes -ExecCGI
 
         AllowOverride all
         Require all granted
     </Directory>
+
+    #<Location />
+    #   AuthType Digest
+    #   AuthName "Auth - Digest"
+    #   AuthDigestDomain /home/${WWW_USER_NAME}/root
+    #   AuthUserFile /home/${WWW_USER_NAME}/root/.digest_htpasswd
+    #   Require valid-user
+    #</Location>
 
     <IfModule mod_proxy.c>
         ProxyRequests off
@@ -57,14 +65,14 @@
 
     # Log
     LogLevel error
-    ErrorLog /home/${WWW_USER_NAME}/www/error.log
-    #CustomLog /home/${WWW_USER_NAME}/www/custom.log combined
+    ErrorLog /home/${WWW_USER_NAME}/root/error.log
+    #CustomLog /home/${WWW_USER_NAME}/root/custom.log combined
 </VirtualHost>
 
 <VirtualHost *:443>
-    ServerAdmin cimo@localhost
-    ServerName localhost
-    ServerAlias localhost
+    ServerAdmin cimo@${PHP7_VH_NAME}
+    ServerName ${PHP7_VH_NAME}
+    ServerAlias ${PHP7_VH_NAME}
 
     Protocols h2 h2c http/1.1
     H2Push on
@@ -79,14 +87,14 @@
     KeepAliveTimeout 100
     MaxKeepAliveRequests 200
 
-    DocumentRoot /home/${WWW_USER_NAME}/www/ow_system/dist
+    DocumentRoot /home/${WWW_USER_NAME}/root/ow_system/dist
     DirectoryIndex index.html
 
     <FilesMatch ".(jpg|jpeg|png|gif|ico|svg|css|js|eot|ttf|woff|woff2)$">
         Header set Cache-Control "max-age=31536000, public"
     </FilesMatch>
 
-    <Directory /home/${WWW_USER_NAME}/www/ow_system/dist>
+    <Directory /home/${WWW_USER_NAME}/root/ow_system/dist>
         SSLRequireSSL on
 
         Options +FollowSymLinks -Indexes -Includes -ExecCGI
@@ -94,6 +102,14 @@
         AllowOverride all
         Require all granted
     </Directory>
+
+    #<Location />
+    #   AuthType Digest
+    #   AuthName "Auth - Digest"
+    #   AuthDigestDomain /home/${WWW_USER_NAME}/root
+    #   AuthUserFile /home/${WWW_USER_NAME}/root/.digest_htpasswd
+    #   Require valid-user
+    #</Location>
 
     <IfModule mod_proxy.c>
         ProxyRequests off
@@ -108,9 +124,9 @@
         SSLEngine on
         SSLProxyEngine on
 
-        SSLCertificateFile ${CERTIFICATE_FILE}
-        SSLCertificateKeyFile ${CERTIFICATE_KEY}
-        SSLCertificateChainFile ${CERTIFICATE_CHAIN}
+        SSLCertificateFile /home/${WWW_USER_NAME}/root/certificate/${CERTIFICATE_FILE}
+        SSLCertificateKeyFile /home/${WWW_USER_NAME}/root/certificate/${CERTIFICATE_KEY}
+        SSLCertificateChainFile /home/${WWW_USER_NAME}/root/certificate/${CERTIFICATE_CHAIN}
     </IfModule>
 
     <IfModule mod_rewrite.c>
@@ -129,8 +145,8 @@
     # Log
     #LogLevel info mod_ssl.c:debug
     LogLevel error
-    ErrorLog /home/${WWW_USER_NAME}/www/error.log
-    #CustomLog /home/${WWW_USER_NAME}/www/custom.log combined
+    ErrorLog /home/${WWW_USER_NAME}/root/error.log
+    #CustomLog /home/${WWW_USER_NAME}/root/custom.log combined
 </VirtualHost>
 
 SSLProtocol all -SSLv3 -TLSv1 -TLSv1.1
