--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -162,6 +162,7 @@ services:
       - 127.0.0.1:${MYSQL_PORT}:3306
     volumes:
       - ${PATH_ROOT}:/home/${WWW_USER_NAME}/root
+      - ${MYSQL_DATA_PATH}:/var/lib/mysql
     depends_on:
       - apache_container
     networks:
@@ -196,6 +197,7 @@ services:
       - 127.0.0.1:${POSTGRES_PORT}:5432
     volumes:
       - ${PATH_ROOT}:/home/${WWW_USER_NAME}/root
+      - ${POSTGRES_DATA_PATH}:/var/lib/postgresql/data
     depends_on:
       - apache_container
     networks:
@@ -243,6 +245,7 @@ services:
       - 127.0.0.1:${NODEJS_PORT_VUE_APP}:${NODEJS_PORT_VUE_APP}
     volumes:
       - ${PATH_ROOT}:/home/${WWW_USER_NAME}/root
+      - ${NODEJS_VUE_DATA_PATH}:/home/${WWW_USER_NAME}/root/ow_system/node_modules
     networks:
       one_workspace:
         ipv4_address: ${NODEJS_NETWORK_IP}
